gccida/c1/simplify_subreg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:2942:23: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_subreg( machine_mode outermode, rtx op, machine_mode innermode, unsigned int byte) 
                      ^
                      enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:2942:55: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_subreg( machine_mode outermode, rtx op, machine_mode innermode, unsigned int byte) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:2945:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:2960:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:2976:4: error: expected ';' after expression
rtx v37; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:2976:5: error: use of undeclared identifier 'v37'
rtx v37; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:2982:6: error: use of undeclared identifier 'v43'
rtx *v43; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:2983:4: error: expected ';' after expression
rtx v44; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:2983:5: error: use of undeclared identifier 'v44'
rtx v44; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:2985:4: error: expected ';' after expression
rtx memref; // [rsp+8h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:2985:5: error: use of undeclared identifier 'memref'
rtx memref; // [rsp+8h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:3000:1: error: use of undeclared identifier 'memref'
memref = v7; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:3013:6: error: use of undeclared identifier 'memref'
v7 = memref; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:3018:32: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( v12 == v9 && v12 < v10 && mode_class_0[outermode] == MODE_INT ) 
                               ^~~~~~~~~~~~
                               mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:3021:25: error: use of undeclared identifier 'memref'
v14 = constant_subword( memref, byte >> ( 3 - ( ( target_flags & 0x2000000) == 0)), v5); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:3027:6: error: use of undeclared identifier 'memref'
v7 = memref; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:3055:6: error: use of undeclared identifier 'memref'
v7 = memref; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:3060:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[outermode] == MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/simplify-rtx.c:3101:37: error: use of undeclared identifier 'memref'
|| ( v39 = ix86_hard_regno_mode_ok( memref->fld[0].rtint, v5), v38 = 1, !v39) ) 
                                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_subreg/src/obj/simplify-rtx.o] Error 1
